fixed sizing issues with grid and giant white space

--- a/css/main.css
+++ b/css/main.css
@@ -112,13 +112,11 @@ html {
 
 /* adjusts size of logo image */
 #nav-logo {
-    width: 3rem;
     height: auto;
 }
 
-/* colours nav title white */
+/* adds padding to logo*/
 .nav-title h1 {
-    color: white;
     padding: 1rem;
 }
 
@@ -215,31 +213,36 @@ main {
 .image-grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
     gap: 2rem;
+}
+
+.image-grid img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
 
 /* top left */
 #coffee-beans {
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     grid-row: 1 / 2;
 }
 
 /* top right */
 #pouring-coffee {
-    grid-column: 2 / 4;
+    grid-column: 3 / 5;
     grid-row: 1 / 2;
 }
 
 /* bottom left */
 #three-cups {
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     grid-row: 2 / 2;
 }
 
 /* bottom right */
 #smiling {
-    grid-column: 2 / 4;
+    grid-column: 3 / 5;
     grid-row: 2 / 4;
 }
 
